fix model width on mobile

--- a/custom.css
+++ b/custom.css
@@ -76,7 +76,7 @@
 
   #modelbody {
     /* position: fixed; */
-    width: 420px;
+    max-width: 420px;
     margin-top: 0%;
     margin-bottom: 0%;
     margin-left: auto;
